// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TransactionDetails /> renders no deposit 1`] = `
<div
  className="c-TransactionInfoContainer-gTnqfS"
>
  <div
    className="PJLV row no-gutters"
  >
    <div
      className="col-md-5"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-user.svg"
              />
              component.transactions.TransactionDetails.signed_by.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onClick={[Function]}
              >
                <a
                  className="c-AccountLinkWrapper-dbzzBd"
                  href="/accounts/signer.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  signer.test
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-user.svg"
              />
              component.transactions.TransactionDetails.receiver.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onClick={[Function]}
              >
                <a
                  className="c-AccountLinkWrapper-dbzzBd"
                  href="/accounts/receiver.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  receiver.test
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-t-status.svg"
              />
              component.transactions.TransactionDetails.status.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <div
                className="c-TransactionStatusWrapper-bPodHi"
              >
                common.transactions.status.success
                /common.blocks.status.checking_finality
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row no-gutters"
  >
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-size.svg"
              />
              component.transactions.TransactionDetails.transaction_fee.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                &lt;0.00001
                 
                Ⓝ
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-filter.svg"
              />
              component.transactions.TransactionDetails.deposit_value.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                0
                 
                Ⓝ
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-size.svg"
              />
              component.transactions.TransactionDetails.gas_used.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              445 Ggas
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-size.svg"
              />
              component.transactions.TransactionDetails.attached_gas.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              445 Ggas
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="border-0 row no-gutters"
  >
    <div
      className="col-md-4"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              component.transactions.TransactionDetails.created.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              2019-02-01T00:00:00Z formatted by common.date_time.date_time_format
              <div
                className="c-Wrapper-kgHvMp c-Wrapper-kgHvMp-ieesTsS-css"
              >
                <svg
                  height=".6em"
                  onClick={[Function]}
                  viewBox="0 0 18 18"
                  width=".6em"
                >
                  <path
                    d="m11.315 5.9932h-9.7723c-0.85717 0-1.5427 0.63916-1.5427 1.4383v9.1302c0 0.7788 0.68557 1.4383 1.5427 1.4383h9.7931c0.8354 0 1.5427-0.6392 1.5427-1.4383l8e-4 -9.1302c-0.0217-0.79915-0.7073-1.4383-1.5645-1.4383h2e-4zm0.2569 10.549c0 0.1201-0.1071 0.22-0.236 0.22l-9.793-7e-4c-0.12891 0-0.23606-0.0999-0.23606-0.2201l8.3e-4 -9.11c0-0.12018 0.10715-0.22009 0.23607-0.22009h9.793c0.1289 0 0.2361 0.0999 0.2361 0.22009l-9e-4 9.1108z"
                    fill="currentColor"
                  />
                  <path
                    d="m16.457 1.1984e-4h-9.7723c-0.85718 0-1.5427 0.63916-1.5427 1.4383v3.3566h1.2858v-3.3566c0-0.12019 0.10714-0.22009 0.23606-0.22009h9.793c0.1289 0 0.2361 0.09989 0.2361 0.22009v9.1302c0 0.1202-0.1071 0.2201-0.2361 0.2201h-2.3146v1.1987h2.3146c0.8354 0 1.5428-0.6392 1.5428-1.4383v-9.1108c0-0.79916-0.6856-1.4383-1.5428-1.4383l2e-4 1.1984e-4z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-8"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              component.transactions.TransactionDetails.hash.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              BvJeW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row no-gutters"
  >
    <div
      className="col-md-12"
    >
      <div
        className="c-CardCellWrapper-gHjrDY c-TransactionCardBlockHash-jlBwPJ border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              component.transactions.TransactionDetails.block_hash.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onClick={[Function]}
              >
                <a
                  href="/blocks/BvJeW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  BvJeW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TransactionDetails /> renders with one small deposit 1`] = `
<div
  className="c-TransactionInfoContainer-gTnqfS"
>
  <div
    className="PJLV row no-gutters"
  >
    <div
      className="col-md-5"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-user.svg"
              />
              component.transactions.TransactionDetails.signed_by.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onClick={[Function]}
              >
                <a
                  className="c-AccountLinkWrapper-dbzzBd"
                  href="/accounts/signer2.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  signer2.test
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-user.svg"
              />
              component.transactions.TransactionDetails.receiver.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onClick={[Function]}
              >
                <a
                  className="c-AccountLinkWrapper-dbzzBd"
                  href="/accounts/receiver2.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  receiver2.test
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-t-status.svg"
              />
              component.transactions.TransactionDetails.status.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <div
                className="c-TransactionStatusWrapper-bPodHi"
              >
                common.transactions.status.success
                /common.blocks.status.checking_finality
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row no-gutters"
  >
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-size.svg"
              />
              component.transactions.TransactionDetails.transaction_fee.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                &lt;0.00001
                 
                Ⓝ
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-filter.svg"
              />
              component.transactions.TransactionDetails.deposit_value.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                &lt;0.00001
                 
                Ⓝ
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-size.svg"
              />
              component.transactions.TransactionDetails.gas_used.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              1 Mgas
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-size.svg"
              />
              component.transactions.TransactionDetails.attached_gas.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              2 Mgas
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="border-0 row no-gutters"
  >
    <div
      className="col-md-4"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              component.transactions.TransactionDetails.created.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              2019-02-01T00:00:00Z formatted by common.date_time.date_time_format
              <div
                className="c-Wrapper-kgHvMp c-Wrapper-kgHvMp-ieesTsS-css"
              >
                <svg
                  height=".6em"
                  onClick={[Function]}
                  viewBox="0 0 18 18"
                  width=".6em"
                >
                  <path
                    d="m11.315 5.9932h-9.7723c-0.85717 0-1.5427 0.63916-1.5427 1.4383v9.1302c0 0.7788 0.68557 1.4383 1.5427 1.4383h9.7931c0.8354 0 1.5427-0.6392 1.5427-1.4383l8e-4 -9.1302c-0.0217-0.79915-0.7073-1.4383-1.5645-1.4383h2e-4zm0.2569 10.549c0 0.1201-0.1071 0.22-0.236 0.22l-9.793-7e-4c-0.12891 0-0.23606-0.0999-0.23606-0.2201l8.3e-4 -9.11c0-0.12018 0.10715-0.22009 0.23607-0.22009h9.793c0.1289 0 0.2361 0.0999 0.2361 0.22009l-9e-4 9.1108z"
                    fill="currentColor"
                  />
                  <path
                    d="m16.457 1.1984e-4h-9.7723c-0.85718 0-1.5427 0.63916-1.5427 1.4383v3.3566h1.2858v-3.3566c0-0.12019 0.10714-0.22009 0.23606-0.22009h9.793c0.1289 0 0.2361 0.09989 0.2361 0.22009v9.1302c0 0.1202-0.1071 0.2201-0.2361 0.2201h-2.3146v1.1987h2.3146c0.8354 0 1.5428-0.6392 1.5428-1.4383v-9.1108c0-0.79916-0.6856-1.4383-1.5428-1.4383l2e-4 1.1984e-4z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-8"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              component.transactions.TransactionDetails.hash.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              222eW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row no-gutters"
  >
    <div
      className="col-md-12"
    >
      <div
        className="c-CardCellWrapper-gHjrDY c-TransactionCardBlockHash-jlBwPJ border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              component.transactions.TransactionDetails.block_hash.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onClick={[Function]}
              >
                <a
                  href="/blocks/222BBBgnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  222BBBgnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TransactionDetails /> renders with two big deposit 1`] = `
<div
  className="c-TransactionInfoContainer-gTnqfS"
>
  <div
    className="PJLV row no-gutters"
  >
    <div
      className="col-md-5"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-user.svg"
              />
              component.transactions.TransactionDetails.signed_by.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onClick={[Function]}
              >
                <a
                  className="c-AccountLinkWrapper-dbzzBd"
                  href="/accounts/signer2.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  signer2.test
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-user.svg"
              />
              component.transactions.TransactionDetails.receiver.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onClick={[Function]}
              >
                <a
                  className="c-AccountLinkWrapper-dbzzBd"
                  href="/accounts/receiver2.test"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  receiver2.test
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-t-status.svg"
              />
              component.transactions.TransactionDetails.status.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <div
                className="c-TransactionStatusWrapper-bPodHi"
              >
                common.transactions.status.success
                /common.blocks.status.checking_finality
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row no-gutters"
  >
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-size.svg"
              />
              component.transactions.TransactionDetails.transaction_fee.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                &lt;0.00001
                 
                Ⓝ
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-filter.svg"
              />
              component.transactions.TransactionDetails.deposit_value.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                0.00014
                 
                Ⓝ
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-size.svg"
              />
              component.transactions.TransactionDetails.gas_used.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              123 Mgas
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-sm-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              <img
                className="c-CardCellTitleImage-dihKuo"
                src="/static/images/icon-m-size.svg"
              />
              component.transactions.TransactionDetails.attached_gas.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              123 Mgas
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="border-0 row no-gutters"
  >
    <div
      className="col-md-4"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              component.transactions.TransactionDetails.created.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              2019-02-01T00:00:00Z formatted by common.date_time.date_time_format
              <div
                className="c-Wrapper-kgHvMp c-Wrapper-kgHvMp-ieesTsS-css"
              >
                <svg
                  height=".6em"
                  onClick={[Function]}
                  viewBox="0 0 18 18"
                  width=".6em"
                >
                  <path
                    d="m11.315 5.9932h-9.7723c-0.85717 0-1.5427 0.63916-1.5427 1.4383v9.1302c0 0.7788 0.68557 1.4383 1.5427 1.4383h9.7931c0.8354 0 1.5427-0.6392 1.5427-1.4383l8e-4 -9.1302c-0.0217-0.79915-0.7073-1.4383-1.5645-1.4383h2e-4zm0.2569 10.549c0 0.1201-0.1071 0.22-0.236 0.22l-9.793-7e-4c-0.12891 0-0.23606-0.0999-0.23606-0.2201l8.3e-4 -9.11c0-0.12018 0.10715-0.22009 0.23607-0.22009h9.793c0.1289 0 0.2361 0.0999 0.2361 0.22009l-9e-4 9.1108z"
                    fill="currentColor"
                  />
                  <path
                    d="m16.457 1.1984e-4h-9.7723c-0.85718 0-1.5427 0.63916-1.5427 1.4383v3.3566h1.2858v-3.3566c0-0.12019 0.10714-0.22009 0.23606-0.22009h9.793c0.1289 0 0.2361 0.09989 0.2361 0.22009v9.1302c0 0.1202-0.1071 0.2201-0.2361 0.2201h-2.3146v1.1987h2.3146c0.8354 0 1.5428-0.6392 1.5428-1.4383v-9.1108c0-0.79916-0.6856-1.4383-1.5428-1.4383l2e-4 1.1984e-4z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-8"
    >
      <div
        className="c-CardCellWrapper-gHjrDY border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              component.transactions.TransactionDetails.hash.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              222eW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVxxx
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row no-gutters"
  >
    <div
      className="col-md-12"
    >
      <div
        className="c-CardCellWrapper-gHjrDY c-TransactionCardBlockHash-jlBwPJ border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="c-CardCellTitle-epaoYL align-self-center col-md-12 col-auto"
            >
              component.transactions.TransactionDetails.block_hash.title
              <div
                className="c-TermHelper-ZvBTK"
                onClick={[Function]}
              >
                <img
                  className="c-TermInfoIcon-leEap"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="c-CardCellText-eLcwWo ml-auto align-self-center col-md-12 col-auto"
            >
              <span
                onClick={[Function]}
              >
                <a
                  href="/blocks/222BBBgnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  222BBBgnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
